Вернул верхний блок навигации

--- a/app/views/application/_navigation.html.slim
+++ b/app/views/application/_navigation.html.slim
@@ -3,5 +3,5 @@
   title-bar-title Menu
 
 nav.top-bar#navigation_menu
-  / = render "navigation_main"
+  = render "navigation_main"
   / = render "navigation_user"
